idea/testData/multiplatform/duplicateActualsOneWeaklyIncompatible/bottom/bottom.kt
package foo

<!ACTUAL_WITHOUT_EXPECT!>private<!> class A